fix(bootstrap4-theme): grid links wrap styles

--- a/packages/bootstrap4-theme/src/scss/extends/_grid-links.scss
+++ b/packages/bootstrap4-theme/src/scss/extends/_grid-links.scss
@@ -23,6 +23,7 @@
   row-gap: $uds-size-spacing-3;
 
   a {
+    display: flex;
     @include like-an-h4;
     border: 1px solid $uds-color-base-gray-3;
     color: $uds-color-base-gray-7;
@@ -31,7 +32,7 @@
     text-decoration: none;
 
     svg {
-      margin-right: $uds-size-spacing-1;
+      margin: $uds-size-spacing-1 / 2 $uds-size-spacing-1 0 0;
     }
 
     &:hover {
